<resources>
    <string name="app_name">ToDo</string>
    <string name="task_title_default">Uninitialized</string>
    <string name="task_created_time_default">Created on:</string>
    <string name="task_description_default">No description</string>
    <string name="lastSync">Last sync:</string>
    <string name="newToDoItem">New ToDo Item</string>
    <string name="done">Done</string>
    <string name="addItemNameHint">Add a name</string>
    <string name="addItemDescHint">Description or details</string>
    <string name="taskTypeLabel">Type:</string>
    <string name="urgencyLabel">Urgency:</string>
    <string name="taskAge">Task Age:</string>
    <string name="completedIn">Completed In:</string>
    <string name="addItemAndNext">Add Another</string>
    <string name="cancel">Cancel</string>
    <string name="taskCompleteButtonLabel">Task Complete</string>
    <string name="taskUndoCompleteButtonLabel">Incomplete</string>
    <string name="filterByTask">Filter By:</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ipAddress">IP Address</string>
    <string name="port">Port</string>
</resources>
