<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:padding="5dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">


    <TextView
            android:id="@+id/taskNameDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/gold"
            android:text="@string/task_title_default"
            android:textAllCaps="true"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    <TextView
            android:id="@+id/taskCreatedDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_created_time_default"
            android:textSize="15dp"/>

    <TextView
            android:id="@+id/taskDetailDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_description_default"
            android:textSize="15dp"/>

</LinearLayout>