<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:text="@string/ipAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editIpAddress"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text="@string/port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editIpAddress" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editPort" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="75dp" app:layout_constraintTop_toBottomOf="@+id/editPort"/>
    <Button
            android:text="@string/done"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/doneButton" android:layout_marginEnd="17dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="108dp" app:layout_constraintStart_toEndOf="@+id/cancelButton"
            android:layout_marginTop="75dp" app:layout_constraintTop_toBottomOf="@+id/editPort"/>
</android.support.constraint.ConstraintLayout>