<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:text="@string/taskTypeLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/textView"/>

    <Spinner
            android:id="@+id/selectTaskType"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/todo_view_shape"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="8dp">
    </Spinner>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/urgencyLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/selectTaskUrgency"
            android:layout_marginEnd="8dp" android:layout_marginBottom="82dp"
            app:layout_constraintBottom_toTopOf="@+id/editItemName"/>

    <Spinner
            android:id="@+id/selectTaskUrgency"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/todo_view_shape"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="8dp"
    >
    </Spinner>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="95dp"
                                          android:orientation="horizontal"/>


    <EditText
            android:id="@+id/editItemName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/addItemNameHint"
            android:inputType="textCapCharacters"
            android:layout_marginTop="82dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/editItemDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/addItemDescHint"
            android:inputType="textShortMessage"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editItemName" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <Button android:id="@+id/addTaskAndDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addItemAndFinish"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editItemDesc"
            app:layout_constraintStart_toEndOf="@+id/addTaskAndContinueButton" android:layout_marginTop="16dp"/>

    <Button android:id="@+id/addTaskAndContinueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addItemAndNext"
            android:layout_marginStart="41dp"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintEnd_toStartOf="@+id/addTaskAndDone" android:layout_marginEnd="42dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editItemDesc" android:layout_marginTop="16dp"/>

    <Button android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editItemDesc" android:layout_marginTop="16dp"/>


</android.support.constraint.ConstraintLayout>