<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
>


    <TextView
            android:id="@+id/taskNameDisplay"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="5dp"
            android:background="@color/gold"
            android:text="@string/task_title_default"
            android:textAllCaps="true"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/taskCreatedLabel"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/task_created_time_default"
            android:textSize="15dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/taskNameDisplay"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/taskCreatedValue"
            android:text="YYYY-MM-DD"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/taskNameDisplay"
            app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/taskAgeLabel"
            android:text="@string/taskAge"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/taskCreatedLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <TextView
            android:id="@+id/taskAgeValue"
            android:text="99 DAYS"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/taskCreatedValue"
            app:layout_constraintStart_toStartOf="@+id/guideline4" app:layout_constraintEnd_toEndOf="parent"
    />


    <TextView
            android:id="@+id/taskDetailDisplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/task_description_default"
            android:textSize="15dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/taskAgeLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"/>


    <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailDisplay"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>


    <Button
            android:id="@+id/completeTaskButton"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/taskCompleteButtonLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/taskDetailDisplay"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline4" app:layout_constraintGuide_begin="133dp"
                                          android:orientation="vertical"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5" app:layout_constraintGuide_begin="411dp"
                                          android:orientation="vertical"/>


</android.support.constraint.ConstraintLayout>